fixed dropdown visibility

--- a/src/sceditor.scss
+++ b/src/sceditor.scss
@@ -103,3 +103,9 @@ div.sceditor-grip {
 .sourceMode textarea:not(.textarea-input) {
         background-color: var(--bs-tertiary-bg);
 }
+
+.dropdown-mentions {
+   max-height: 200px;
+   margin-bottom: 10px;
+   overflow: scroll; 
+}
